--- a/index.html
+++ b/index.html
@@ -1,30 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="messtyles.css">
     <title>Document</title>
 </head>
-<body>
-
-    <table borde="1">
-       <tr>
-          <td>Prénom</td>
-          <td>Nom</td>
-          <td>Covoiturage</td>
-       </tr> 
-       <tr>
-          <td>Tristan</td>
-          <td>LEFAIST</td>
-          <td>Vient avec sa voiture</td>
-       </tr> 
-       <tr>
-          <td>Tristan</td>
-          <td>TIREBOIS</td>
-          <td>Vient avec sa voiture</td>
-     </tr> 
-    </table>
-    
+<body class="fond">
+   <h1>Version rouge</h1>
 </body>
 </html>
