--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-<head>
-    <meta charset="UTF-8">
-   <link rel="stylesheet" href="messtyles.css">
-    <title>Document</title>
-</head>
-<body class="fond">
-   <h1>Version rouge</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="messtyles.css">
+        <title>Document</title>
+    </head>
+    <body class="fond">
+        <h1 id="TitreNiveau1">Version fond bleu et titre jaune</h1>
+    </body>
 </html>
